--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "build": "yarn theia build",
-    "start": "yarn build && yarn theia start"
+    "start": "node_modules/.bin/theia build && node_modules/.bin/theia start",
+    "onlyBuild": "node_modules/.bin/theia build",
+    "onlyStart": "node_modules/.bin/theia start"
   },
   "dependencies": {
     "typescript": "latest",
