--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/theia build && ./node_modules/.bin/theia start",
+    "start": "yarn onlyBuild && ./node_modules/.bin/theia start",
     "onlyBuild": "node_modules/.bin/theia build",
     "onlyStart": "node_modules/.bin/theia start"
   },
@@ -22,9 +22,7 @@
     "@theia/search-in-workspace": "next",
     "@theia/json": "next",
     "@theia/textmate-grammars": "next",
-    "@theia/mini-browser": "next"
-  },
-  "devDependencies": {
+    "@theia/mini-browser": "next",
     "@theia/cli": "next"
   }
 }
