--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "yarn onlyStart",
     "onlyBuild": "yarn theia build",
-    "onlyStart": "yarn theia start",
+    "onlyStart": "yarn theia start --hostname 0.0.0.0 --port $PORT",
     "postinstall": "yarn onlyBuild"
   },
   "dependencies": {
